# atlas

./: .gitignore  README.md  hpke-double-ext.md
atlas-spec/: Cargo.toml
atlas-spec/chacha20/: Cargo.toml
atlas-spec/chacha20/src/: chacha20.rs
atlas-spec/chacha20/tests/: test_chacha20.rs
atlas-spec/elgamal/: Cargo.toml
atlas-spec/elgamal/src/: lib.rs
atlas-spec/hacspec-chacha20poly1305/: Cargo.toml
atlas-spec/hacspec-chacha20poly1305/src/: chacha20poly1305.rs
atlas-spec/hacspec-chacha20poly1305/tests/: test_chacha20poly1305.rs
atlas-spec/hacspec_lib/: Cargo.toml
atlas-spec/hacspec_lib/src/: bytes.rs  hacspec_helper.rs  lib.rs  rng.rs
atlas-spec/hash-to-curve/: Cargo.toml  Readme.md
atlas-spec/hash-to-curve/proofs/fstar/extraction/: Hash_to_curve.Expand_message.fst  Hash_to_curve.Hash_suite.fst  Hash_to_curve.fst
atlas-spec/hash-to-curve/src/: lib.rs  p256_hash.rs
atlas-spec/hmac/: Cargo.toml
atlas-spec/hmac/src/: lib.rs
atlas-spec/mpc-engine/: Cargo.toml
atlas-spec/mpc-engine/examples/: dealer_product.rs  run_mpc.rs
atlas-spec/mpc-engine/src/: broadcast.rs  circuit.rs  lib.rs  messages.rs  party.rs  runner.rs  utils.rs
atlas-spec/mpc-engine/src/primitives/: auth_share.rs  commitment.rs  kos.rs  kos_base.rs  mac.rs  mod.rs  ot.rs
atlas-spec/mpc-engine/src/utils/: ideal_fpre.rs  ideal_ot.rs  rand.rs
atlas-spec/natmod/src/: lib.rs
atlas-spec/natmod/tests/: poly1305.rs
atlas-spec/oprf/: Cargo.toml
atlas-spec/oprf/src/: p256_sha256.rs
atlas-spec/oprf/src/coprf/: coprf_online.rs  coprf_setup.rs
atlas-spec/oprf/src/protocol/: mod.rs
atlas-spec/p256/: Cargo.toml
atlas-spec/p256/src/: p256.rs
atlas-spec/p256/tests/: test_p256.rs
atlas-spec/poly1305/: Cargo.toml
atlas-spec/poly1305/src/: poly1305.rs
atlas-spec/poly1305/tests/: test_poly1305.rs
atlas-spec/prp/: Cargo.toml
atlas-spec/prp/src/: lib.rs
atlas-spec/scrambledb/: Cargo.toml
atlas-spec/scrambledb/src/: data_transformations.rs  data_types.rs  error.rs  join.rs  lib.rs  setup.rs  split.rs  table.rs  test_util.rs  wasm_demo.rs
atlas-spec/scrambledb/src/data_transformations/: data_encryption.rs  double_hpke.rs
atlas-spec/scrambledb/src/data_transformations/data_encryption/: elgamal.rs
atlas-spec/scrambledb/wasm_demo/: README.md  index.html
atlas-spec/sha256/: Cargo.toml
atlas-spec/sha256/src/: lib.rs
hacspec-scrambledb/: Cargo.toml
hacspec-scrambledb/aead/: Cargo.toml
hacspec-scrambledb/aead/src/: aead.rs
hacspec-scrambledb/elgamal/: Cargo.toml
hacspec-scrambledb/elgamal/src/: lib.rs
hacspec-scrambledb/errors/: Cargo.toml  rust-toolchain
hacspec-scrambledb/errors/src/: errors.rs
hacspec-scrambledb/evercrypt_cryptolib/: Cargo.toml  Readme.md
hacspec-scrambledb/evercrypt_cryptolib/src/: lib.rs
hacspec-scrambledb/evercrypt_cryptolib/tests/: aead_test.rs  cert_tests.rs  kem_tests.rs  signature_tests.rs
hacspec-scrambledb/hacspec_cryptolib/: Cargo.toml  Cryptolib.fst  Readme.md
hacspec-scrambledb/hacspec_cryptolib/src/: cryptolib.rs
hacspec-scrambledb/hacspec_cryptolib/tests/: aead_test.rs  cert_tests.rs  kem_tests.rs  signature_tests.rs
hacspec-scrambledb/hacspec_lib/: Cargo.toml
hacspec-scrambledb/hacspec_lib/proofs/fstar/extraction/: Hacspec_lib.fst
hacspec-scrambledb/hacspec_lib/src/: lib.rs  rng.rs
hacspec-scrambledb/hash-to-curve/: Cargo.toml  Readme.md
hacspec-scrambledb/hash-to-curve/proofs/fstar/extraction/: Hash_to_curve.Hacspec_helper.fst  Hash_to_curve.Hasher.fst  Hash_to_curve.P256_hash.fst  Hash_to_curve.Prime_field.fst  Hash_to_curve.fst
hacspec-scrambledb/hash-to-curve/src/: bls12_381.rs  bls12_381_g1_hash.rs  bls12_381_g2_hash.rs  bls12_381_hash.rs  curve25519_hash.rs  curve448_hash.rs  edwards25519_hash.rs  edwards448_hash.rs  expand_message.rs  hacspec_helper.rs  hash_suite.rs  hasher.rs  lib.rs  mappings.rs  p256.rs  p256_hash.rs  p384_hash.rs  p521_hash.rs  prime_curve.rs  prime_field.rs  secp256k1_hash.rs  test_utils.rs
hacspec-scrambledb/hmac/: Cargo.toml
hacspec-scrambledb/hmac/src/: hacspec_helper.rs  lib.rs
hacspec-scrambledb/hpke_double/: Cargo.toml  Readme.md  Security.md  benchmarks.md
hacspec-scrambledb/hpke_double/benches/: bench.rs
hacspec-scrambledb/hpke_double/src/: hpke.rs
hacspec-scrambledb/hpke_double/tests/: derive_key_pair.rs  kat.rs  single_kat.rs
hacspec-scrambledb/hpke_double/wasm_demo/: Readme.md  index.html
hacspec-scrambledb/kdf/: Cargo.toml
hacspec-scrambledb/kdf/src/: kdf.rs
hacspec-scrambledb/kem/: Cargo.toml  Readme.md
hacspec-scrambledb/kem/src/: kem.rs
hacspec-scrambledb/kem/tests/: x25519_self.rs
hacspec-scrambledb/natmod/: Cargo.toml
hacspec-scrambledb/natmod/proofs/fstar/extraction/: Natmod.Nat_mod.fst  Natmod.fst
hacspec-scrambledb/natmod/src/: lib.rs
hacspec-scrambledb/oprf/: Cargo.toml
hacspec-scrambledb/oprf/src/: dlog_eq.rs  lib.rs  oprf.rs  oprf_suite.rs  p256_sha256.rs  prime_order_group.rs  test_util.rs  util.rs
hacspec-scrambledb/oprf/src/coprf/: coprf_online.rs  coprf_setup.rs  mod.rs
hacspec-scrambledb/oprf/src/protocol/: configuration.rs  mod.rs  setup.rs
hacspec-scrambledb/oprf/src/protocol/online/: mod.rs  oprf.rs
hacspec-scrambledb/p256/: Cargo.toml
hacspec-scrambledb/p256/src/: hacspec_helper.rs  p256.rs
hacspec-scrambledb/p256/tests/: test_p256.rs
hacspec-scrambledb/prp/: Cargo.toml
hacspec-scrambledb/prp/src/: hacspec_helper.rs  lib.rs
hacspec-scrambledb/scrambledb/: Cargo.toml  rustfmt.toml
hacspec-scrambledb/scrambledb-util/: Cargo.toml
hacspec-scrambledb/scrambledb-util/src/: lib.rs
hacspec-scrambledb/scrambledb/src/: converter.rs  data_transformations.rs  data_types.rs  error.rs  finalize.rs  join.rs  lake.rs  lib.rs  processor.rs  setup.rs  source.rs  split.rs  table.rs  test_util.rs  types.rs  wasm_demo.rs
hacspec-scrambledb/scrambledb/src/data_transformations/: double_hpke.rs
hacspec-scrambledb/scrambledb/wasm_demo/: README.md  index.html
mpc-knowledge-base/: README.md  book.toml
mpc-spec/: Cargo.toml  README.md
pages/: index.html
proofs/: Makefile  coprf.pv  scrambledb.pvl  (+4 more)
(+28 files in other folders)
