[workspace]
members = [
    "scrambledb",
    "elgamal",
    "hash-to-curve",
    "p256",
    "oprf",
    "hacspec_lib",
    "prp",
    "sha256",
    "hmac",
]

[workspace.dependencies]
hacspec_lib = { path = "./hacspec_lib" }
elgamal = { path = "./elgamal" }
hash-to-curve = { path = "./hash-to-curve" }
p256 = { path = "./p256" }
oprf = { path = "./oprf" }
prp = { path = "./prp" }
sha256 = { path = "./sha256" }
hmac = { path = "./hmac" }
natmod = { path = "./natmod" }
