[package]
name = "hacspec-chacha20poly1305"
version = "0.1.0"
authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hacspec-chacha20poly1305"
description = "hacspec chacha20 poly1305 authenticated encryption"
readme = "README.md"
repository = "https://github.com/hacspec/hacspec"

[lib]
path = "src/chacha20poly1305.rs"

[dependencies]
hacspec-chacha20 = { path = "../chacha20", version = "0.1.0" }
hacspec-poly1305 = { path = "../poly1305", version = "0.1.0" }
