[package]
name = "hash-to-curve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
natmod.workspace = true
p256.workspace = true
sha256.workspace = true
hacspec_lib.workspace = true


[dev-dependencies]
serde_json = { version = "1.0" }
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
