[package]
name = "mpc-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
p256.workspace = true
hmac.workspace = true
hacspec-chacha20poly1305.workspace = true
hacspec_lib.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
