[package]
name = "hacspec_cryptolib"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/cryptolib.rs"

[dependencies]
hacspec-lib = { git = "https://github.com/hacspec/hacspec", package = "hacspec-lib" }
hacspec-sha256 = { git = "https://github.com/hacspec/hacspec", package = "hacspec-sha256" }
hacspec-curve25519 = { git = "https://github.com/hacspec/hacspec", package = "hacspec-curve25519" }
hacspec-chacha20poly1305 = { git = "https://github.com/hacspec/hacspec", package = "hacspec-chacha20poly1305" }
hacspec-chacha20 = { git = "https://github.com/hacspec/hacspec", package = "hacspec-chacha20" }
hacspec-poly1305 = { git = "https://github.com/hacspec/hacspec", package = "hacspec-poly1305" }
hacspec-hmac = { git = "https://github.com/hacspec/hacspec", package = "hacspec-hmac" }
hacspec-hkdf = { git = "https://github.com/hacspec/hacspec", package = "hacspec-hkdf" }
hacspec-ecdsa-p256-sha256 = { git = "https://github.com/hacspec/hacspec", package = "hacspec-ecdsa-p256-sha256" }
hacspec-p256 = { git = "https://github.com/hacspec/hacspec", package = "hacspec-p256" }
hacspec-aes = { git = "https://github.com/hacspec/hacspec", package = "hacspec-aes" }
hacspec-gf128 = { git = "https://github.com/hacspec/hacspec", package = "hacspec-gf128" }
hacspec-aes128-gcm = { git = "https://github.com/hacspec/hacspec", package = "hacspec-aes128-gcm" }
