[package]
name = "hash-to-curve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# XXX: Copied the natmod here for now so that it compiles
natmod = { path = "../natmod" }
# XXX: Added the P256 spec so you don't need it in here
p256 = { path = "../p256" }
lazy_static = "1.4.0"
libcrux = { git = "https://github.com/cryspen/libcrux" }
# These should not be necessary. Use natmod instead
num-bigint = "0.4.3"
num-traits = "0.2.15"

[dev-dependencies]
serde_json = "1.0.102"
# This is a dev dependency
hex = "0.4.3"
