[package]
name = "hash-to-curve"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
natmod = { path = "../natmod" }
p256 = { path = "../p256" }
sha256 = { path = "../sha256" }
hacspec_lib = { workspace = true }


[dev-dependencies]
serde_json = { version = "1.0.102" }
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.180", features = ["derive"] }
