[package]
name = "hpke_double"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/hpke.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
hacspec-lib = { git = "https://github.com/hacspec/hacspec", package = "hacspec-lib" }

hpke_errors = { path = "../errors" }
hpke_kdf = { path = "../kdf" }
hpke_kem = { path = "../kem" }
hpke_aead = { path = "../aead" }

# WASM bindgen to get binding for JS
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8" }
getrandom = { version = "0.2", features = ["js"] }

[features]
wasm = ["wasm-bindgen"]

[[bench]]
name = "bench"
harness = false
