[package]
name = "oprf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
natmod = { path = "../natmod" }
p256 = { path = "../p256" }
libcrux = { git = "https://github.com/cryspen/libcrux" }
hash-to-curve = { path = "../hash-to-curve" }
rand = "0.8.5"

[dev-dependencies]
serde_json = { version = "1.0.102" }
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.180", features = ["derive"] }
log = "0.4.19"
pretty_env_logger = "0.5.0"
