[package]
name = "oprf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
natmod = { path = "../natmod" }
p256 = { path = "../p256" }
scrambledb-util = { path = "../scrambledb-util" }
hash-to-curve = { path = "../hash-to-curve" }
elgamal = { path = "../elgamal" }
hacspec_lib.workspace = true

[dev-dependencies]
serde_json = { version = "1.0.102" }
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.180", features = ["derive"] }
log = "0.4.19"
pretty_env_logger = "0.5.0"
