[package]
name = "scrambledb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oprf = { path = "../oprf" }
scrambledb-util = { path = "../scrambledb-util" }
elgamal = { path = "../elgamal" }
libcrux = { git = "https://github.com/cryspen/libcrux" }
