[package]
name = "scrambledb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
oprf.workspace = true
elgamal.workspace = true
prp.workspace = true
p256.workspace = true
hacspec_lib.workspace = true
wasm-bindgen = { version = "0.2.87", optional = true }
rand = "0.8.5"
hash-to-curve.workspace = true
getrandom = { version = "0.2.10", features = ["js"] }
hex = "0.4.3"
[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'console',
    'HtmlTableElement',
    'HtmlTableRowElement',
]
[features]
wasm = ["wasm-bindgen"]
